--- a/Parcels, Paths and Patches.html
+++ b/Parcels, Paths and Patches.html
@@ -1630,13 +1630,15 @@
 					case 42:
 						if (sc.subtype === 1)
 						{
-							let sn = true, ni = s.a.indexOf('?');
-							if (ni === -1) { sn = false; ni = s.r.indexOf('?'); }
-							if (sn && ni >= 0 && ((m = /^Digit([0-9])$/.exec(keycombo)) || (m = /^Numpad([0-9])$/.exec(keycombo))))
-								s.a = setChar(s.a, ni, m[1]);
-							else if (!sn && ni >= 0 && (m = /^Arrow(Up|Right|Down|Left)$/.exec(keycombo)))
+							let ni = s.a.indexOf('?'), ri = s.r.indexOf('?');
+							if (ni >= 0 && ((m = /^Digit([0-9])$/.exec(keycombo)) || (m = /^Numpad([0-9])$/.exec(keycombo))))
 							{
-								s.r = setChar(s.r, ni, `${["Up", "Right", "Down", "Left"].indexOf(m[1])}`);
+								s.a = setChar(s.a, ni, m[1]);
+								changes = true;
+							}
+							else if (ri >= 0 && (m = /^Arrow(Up|Right|Down|Left)$/.exec(keycombo)))
+							{
+								s.r = setChar(s.r, ri, `${["Up", "Right", "Down", "Left"].indexOf(m[1])}`);
 								changes = true;
 							}
 						}
@@ -1787,7 +1789,17 @@
 						switch (sc.subtype)
 						{
 							case 1:
-								if ((btns & 1) && !sc.n.includes(i))
+								if ((btns & 4) && ni >= 0)
+								{
+									sc.v = s = JSON.parse(last);
+									s.a = setChar(s.a, ni, '?');
+								}
+								else if ((btns & 1) && ni >= 0)
+								{
+									sc.v = s = JSON.parse(last);
+									s.r = setChar(s.r, ni, '?');
+								}
+								else if (btns & 1)
 								{
 									if (s.d.includes(i)) s.d.splice(s.d.indexOf(i), 1);
 									else
@@ -1804,12 +1816,6 @@
 										if (i%w > 0)	s.b = setChar(s.b, i-1, String.fromCharCode(((s.b.charCodeAt(i-1)-65) & ~1)+65));
 									}
 									changes = true;
-								}
-								if (ni >= 0 && (btns & 4))
-								{
-									sc.v = s = JSON.parse(last);
-									s.a = setChar(s.a, ni, '?');
-									s.r = setChar(s.r, ni, '?');
 								}
 								break;
 						}
